Added passthrough to tmux.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,3 +59,6 @@ setw -g window-status-current-bg black
 # Clock
 setw -g clock-mode-colour green
 setw -g clock-mode-style 24
+
+# Pass through the prefix (to screen for example)
+bind-key z send-key ^z
