send-key should ofc be send-keys.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,4 +61,4 @@ setw -g clock-mode-colour green
 setw -g clock-mode-style 24
 
 # Pass through the prefix (to screen for example)
-bind-key z send-key ^z
+bind-key z send-keys C-z
