Don't flash that irritating bell (just hilight the window).

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,7 +50,7 @@ set -g status-right '[#[fg=yellow]#(cut -d " " -f 1-4 /proc/loadavg)#[default]] 
 # Notifying if other windows has activities
 setw -g monitor-activity off
 set -g visual-activity on
-set -g visual-bell on
+set -g visual-bell off
 set-window-option -g utf8 on
 
 # Highlighting the active window in status bar
