Major update, colors, font, tmux and support for SCM/VCS in zsh.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,11 +41,14 @@ set -g set-titles on
 set -g set-titles-string '#S:#I.#P #W'
 
 # Status Bar
-set -g status-bg black
-set -g status-fg white 
+set -g status-bg default
+set -g status-fg green 
+set -g status-justify centre
 set -g status-interval 1
-set -g status-left '[#[fg=green]#H]#[default]'
-set -g status-right '[#[fg=yellow]#(cut -d " " -f 1-4 /proc/loadavg)#[default]] [#[fg=green]%Y-%m-%d %H:%M:%S#[default]#]'
+set -g status-left-length 25
+set -g status-right-length 50
+set -g status-left '[#[fg=yellow]#(whoami)#[fg=red]@#[fg=yellow]#H#[default]]'
+set -g status-right '[#[fg=yellow]#(cut -d " " -f 1-4 /proc/loadavg)#[default]] [#[fg=magenta,bold]%Y-%m-%d %H:%M:%S#[default]]'
 
 # Notifying if other windows has activities
 setw -g monitor-activity off
