--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,6 +40,12 @@ bind C-z last-window
 set -g set-titles on
 set -g set-titles-string '#S:#I.#P #W'
 
+# Pane border
+set -g pane-border-bg default
+set -g pane-border-fg white
+set -g pane-active-border-bg default
+set -g pane-active-border-fg green
+
 # Status Bar
 set -g status-bg default
 set -g status-fg green 
