Added a few vim plugins (autoclose and supertab) as well as setting vim to wrap lines. Minor tmux keybinding changes.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,8 +29,8 @@ set -g history-limit 1000
 
 # Pane
 unbind o
-bind C-p select-pane -L
-bind C-n select-pane -R
+bind C-l select-pane -L
+bind C-h select-pane -R
 bind C-j select-pane -D
 bind C-k select-pane -U
 
