--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,7 +54,7 @@ set -g status-interval 1
 set -g status-left-length 25
 set -g status-right-length 50
 set -g status-left '[#[fg=yellow]#(whoami)#[fg=red]@#[fg=yellow]#H#[default]]'
-set -g status-right '[#[fg=yellow]#(cut -d " " -f 1-4 /proc/loadavg)#[default]] [#[fg=magenta,bold]%Y-%m-%d %H:%M:%S#[default]]'
+set -g status-right '[#[fg=yellow]#(cut -d " " -f 1-4 /proc/loadavg)#[default]] [#[fg=magenta]%Y-%m-%d %H:%M:%S#[default]]'
 
 # Notifying if other windows has activities
 setw -g monitor-activity off
