Autoplay youtube-URL's in mplayer.

--- a/.pentadactylrc
+++ b/.pentadactylrc
@@ -2,8 +2,11 @@ set editor='urxvt -e vim -f'
 set showtabline=never
 set mapleader=,
 set showstatuslinks=command
+set defsearch=duckduckgo-ssl
+
+autocmd PageLoadPre '^https?://(?:www\.)?(?:youtu\.be/|youtube\.com/watch\?.*?v=)[0-9A-Za-z-_]+' :silent !splay '<url>'
 
 colorscheme cute
 
 map <Leader>l :ls<CR>
-map <Leader>b :b<CR>
+map <Leader>b :buffer #<CR>
