--- a/.pentadactylrc
+++ b/.pentadactylrc
@@ -2,9 +2,11 @@ set editor='urxvt -e vim -f'
 set showtabline=never
 set mapleader=,
 set showstatuslinks=command
-set defsearch=duckduckgo-ssl
+/*set defsearch=duckduckgo-ssl*/
 
 autocmd PageLoadPre '^https?://(?:www\.)?(?:youtu\.be/|youtube\.com/watch\?.*?v=)[0-9A-Za-z-_]+' :silent !splay '<url>' &
+autocmd LocationChange !web.tweetdeck.com,* :silent emenu Tools.Chrome 15.0.874.120 (Ubuntu 11.10).Default User Agent
+autocmd LocationChange 'web.tweetdeck.com' :silent emenu Tools.Default User Agent.Browsers - Linux.Chrome 15.0.874.120 (Ubuntu 11.10)
 
 colorscheme cute
 
