pentadactyl: hlfind and proper hilight

--- a/.pentadactylrc
+++ b/.pentadactylrc
@@ -2,6 +2,7 @@ set editor='urxvt -e vim -f'
 set showtabline=never
 set mapleader=,
 set showstatuslinks=command
+set hlfind
 /*set defsearch=duckduckgo-ssl*/
 
 autocmd PageLoadPre '^https?://(?:www\.)?(?:youtu\.be/|youtube\.com/watch\?.*?v=)[0-9A-Za-z-_]+' :silent !splay '<url>' &
