proper passkeys for pentadactyl (facebook).

--- a/.pentadactylrc
+++ b/.pentadactylrc
@@ -12,5 +12,9 @@ autocmd LocationChange 'web.tweetdeck.com' :silent emenu Tools.Default User Agen
 
 colorscheme cute
 
+set passkeys+=facebook.com:<CR> " Pass through <CR> to avoid stupid extra-linebreak behavior in input-fields
+
 map ,l :ls<CR>
 map ,b :buffer #<CR>
+
+" vim: set ft=vim:
