Remove that annoying escape-time for tmux.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,6 +16,8 @@ setw -g mode-keys vi
 # Make mouse useful in copy mode
 setw -g mode-mouse on
 
+set -g escape-time 0
+
 # More straight forward key bindings for splitting
 unbind %
 bind | split-window -h
