--- a/.pentadactylrc
+++ b/.pentadactylrc
@@ -18,5 +18,6 @@ set passkeys+=facebook.com:<CR>
 map , <Leader>
 map <Leader>l :ls<CR>
 map <Leader>b :buffer #<CR>
+map <Leader>nh :nohl<CR>
 
 " vim: set ft=vim:
