Activating zsh-predictions + no esc-time in tmux.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -71,5 +71,7 @@ setw -g window-status-current-bg black
 setw -g clock-mode-colour green
 setw -g clock-mode-style 24
 
+set -g escape-time 0
+
 # Pass through the prefix (to screen for example)
 bind-key z send-keys C-z
