--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,13 +50,13 @@ set -g pane-active-border-fg green
 
 # Status Bar
 set -g status-bg default
-set -g status-fg green 
-set -g status-justify centre
+set -g status-fg brightblack 
+set -g status-justify left
 set -g status-interval 1
 set -g status-left-length 25
 set -g status-right-length 50
-set -g status-left '[#[fg=yellow]#(whoami)#[fg=red]@#[fg=yellow]#H#[default]]'
-set -g status-right '[#[fg=yellow]#(cut -d " " -f 1-4 /proc/loadavg)#[default]] [#[fg=magenta]%Y-%m-%d %H:%M:%S#[default]]'
+set -g status-left '#[fg=magenta]%d, %a %H:%M:%S ⚡#[default]'
+set -g status-right '#[fg=yellow]#(cut -d " " -f 1-4 /proc/loadavg)#[default]'
 
 # Notifying if other windows has activities
 setw -g monitor-activity off
@@ -65,13 +65,13 @@ set -g visual-bell off
 set-window-option -g utf8 on
 
 # Highlighting the active window in status bar
-setw -g window-status-current-bg black
+setw -g window-status-current-fg yellow
+setw -g window-status-bell-fg yellow
+setw -g window-status-bell-bg black
 
 # Clock
 setw -g clock-mode-colour green
 setw -g clock-mode-style 24
-
-set -g escape-time 0
 
 # Pass through the prefix (to screen for example)
 bind-key z send-keys C-z
