--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,7 +50,7 @@ set -g pane-active-border-fg green
 
 # Status Bar
 set -g status-bg default
-set -g status-fg brightblack 
+set -g status-fg brightgreen
 set -g status-justify left
 set -g status-interval 1
 set -g status-left-length 25
