tmux: minor status-change.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,7 +55,7 @@ set -g status-justify left
 set -g status-interval 1
 set -g status-left-length 25
 set -g status-right-length 68
-set -g status-left '#[fg=magenta] %d, %a %H:%M:%S#[default]'
+set -g status-left '#[fg=magenta] %a %d, %H:%M:%S#[default]'
 set -g status-right '#[fg=cyan]#(sh $HOME/.tmux/np_spotify.sh) #[fg=yellow]#(cut -d " " -f 1-4 /proc/loadavg)#[default] '
 
 # Notifying if other windows has activities
