tmux: saiph - Kill initial pans automatically.

--- a/.tmux/saiph.conf
+++ b/.tmux/saiph.conf
@@ -1,12 +1,12 @@
 source-file ~/.tmux.conf
 
 # Don't exit the first windows when command exits
-set -g set-remain-on-exit on
+#set -g set-remain-on-exit on
 
 new -n irkken "ssh irkken"
 neww -n mutt "ssh mutt"
 
-set -g set-remain-on-exit off
-set -u set-remain-on-exit
+#set -g set-remain-on-exit off
+#set -u set-remain-on-exit
 
 # vim: set ft=tmux:
