--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,9 @@
 [submodule ".vim/bundle/delimitMate"]
 	path = .vim/bundle/delimitMate
 	url = git://github.com/Raimondi/delimitMate.git
+[submodule ".zsh/completion/zsh-curl-completion"]
+	path = .zsh/completion/zsh-curl-completion
+	url = git://github.com/Valodim/zsh-curl-completion.git
+[submodule ".zsh/completion/zsh-completions"]
+	path = .zsh/completion/zsh-completions
+	url = git://github.com/zsh-users/zsh-completions.git
