Minor changes to tmux and vim-settings.

--- a/.tmux/saiph.conf
+++ b/.tmux/saiph.conf
@@ -3,7 +3,7 @@ source-file ~/.tmux.conf
 # Don't exit the first windows when command exits
 #set -g set-remain-on-exit on
 
-new -n irkken "ssh irkken"
+new -s meta -n irkken "ssh irkken"
 neww -n mutt "ssh mutt"
 
 #set -g set-remain-on-exit off
