--- a/.ratpoisonrc
+++ b/.ratpoisonrc
@@ -57,7 +57,12 @@ definekey top C-4 exec rpws 4
 definekey top C-5 exec rpws 5 
 definekey top C-6 exec rpws 6 
 definekey top C-7 exec rpws 7 
+exec $(sh ~/.ratpoison/ratbind)
 #################################
+
+# Script for undefining and defining keys
+bind M-8 exec $(sh ~/.ratpoison/ratbind)
+bind M-9 exec $(sh ~/.ratpoison/ratbind unbind)
 
 # Window management
 definekey top M-Down resize 0 -10
@@ -72,6 +77,12 @@ definekey top M-l focusright
 definekey top M-h focusleft
 
 bind d dedicate
+
+# Save layout
+bind C-1 exec $(ratpoison -c "setenv x0 $(ratpoison -c 'fdump')")
+bind M-1 exec $(ratpoison -c "frestore $(ratpoison -c 'getenv x0')")
+bind C-2 exec $(ratpoison -c "setenv x1 $(ratpoison -c 'fdump')")
+bind M-2 exec $(ratpoison -c "frestore $(ratpoison -c 'getenv x1')")
 
 
 definekey top M-m exec $(dmenu_path_c | dmenu -nb "#222222" -nf "#eeeeee" -sb "#222222" -sf "#ff9900" -fn '-*-terminus-medium-*-normal-*-12-*-*-*-*-*-*-*')
