Submodule updates and zsh+tmux changes

--- a/.tmux/saiph.conf
+++ b/.tmux/saiph.conf
@@ -3,8 +3,8 @@ source-file ~/.tmux.conf
 # Don't exit the first windows when command exits
 #set -g set-remain-on-exit on
 
-new -s meta -n irkken "ssh irkken"
-neww -n mutt "ssh mutt"
+new -s meta -n irkken "mosh irkken"
+neww -n mutt "mosh mutt"
 
 #set -g set-remain-on-exit off
 #set -u set-remain-on-exit
