--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,7 +14,28 @@ bind Escape copy-mode
 # Use Vi mode
 setw -g mode-keys vi
 # Make mouse useful in copy mode
-setw -g mode-mouse on
+set -g mode-mouse on
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
+
+bind m \
+    set -g mode-mouse on\;\
+    set -g mouse-resize-pane on \;\
+    set -g mouse-select-pane on \;\
+    set -g mouse-select-window on \;\
+    display "Mouse: ON"
+
+bind M \
+    set -g mode-mouse off\;\
+    set -g mouse-resize-pane off \;\
+    set -g mouse-select-pane off \;\
+    set -g mouse-select-window off \;\
+    display "Mouse: off"
+
+bind y run "tmux show-buffer | xclip"
+bind P run "tmux set-buffer -- \"$(xclip -o)\"; tmux paste-buffer"
 
 set -g escape-time 0
 
