--- a/.i3status.conf
+++ b/.i3status.conf
@@ -7,6 +7,7 @@ general {
 order += 'wireless wlan0'
 order += 'ethernet eth0'
 order += 'battery 0'
+order += 'cpu_usage'
 order += 'load'
 order += 'time'
 
