--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,9 @@
 [submodule ".vim/bundle/gundu.vim"]
 	path = .vim/bundle/gundu.vim
 	url = git://github.com/sjl/gundo.vim.git
+[submodule ".xresources/base16"]
+	path = .xresources/base16
+	url = git://github.com/chriskempson/base16-xresources.git
+[submodule ".vim/bundle/base16"]
+	path = .vim/bundle/base16
+	url = git://github.com/chriskempson/base16-vim.git
