--- a/.i3/config
+++ b/.i3/config
@@ -12,7 +12,8 @@ bindsym $mod+Shift+aring kill
 bindsym $mod+e exec $(dmenu_path_c | dmenu -fn 'Xft:DejaVu Sans Mono:pixelsize=10' -nf '#9f0' -sf '#222' -sb '#9f0' -nb '#333')
 
 # Commands
-bindsym $mod+U00a7 exec xclip -o -selection clipboard | xclip
+bindsym $mod+F2 exec xclip -o -selection clipboard | xclip
+bindsym $mod+F1 exec xclip -o | xclip -i -selection clipboard
 
 # change focus
 bindsym $mod+h focus left
@@ -113,6 +114,7 @@ bar {
     modifier $mod
     status_command .i3/statusbar
     font xft:DejaVu Sans Mono 8
+    position top
 
     colors {
         focused_workspace #227700 #227700 #cccccc
