Color-fix for tmux.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -89,6 +89,7 @@ set-window-option -g utf8 on
 setw -g window-status-current-fg yellow
 setw -g window-status-bell-fg yellow
 setw -g window-status-bell-bg black
+setw -g window-status-fg red
 
 # Clock
 setw -g clock-mode-colour green
