Small updates for vim-linting.

--- a/.config/twmn/twmn.conf
+++ b/.config/twmn/twmn.conf
@@ -3,7 +3,7 @@ absolute_position=
 always_on_top=true
 background_color=#121212
 bounce=true
-font=-windows-montecarlo-bold-r-normal--11-110-72-72-c-60-microsoft-cp1252
+font=xft:DejaVu Sans Mono
 font_size=16
 foreground_color=#9EE01B
 height=30
@@ -11,7 +11,7 @@ in_animation=38
 in_animation_duration=1000
 out_animation=13
 out_animation_duration=1000
-position=top_right
+position=top_center
 screen=
 
 [icons]
