Fonts update and new np-script for tomahawk.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -77,7 +77,7 @@ set -g status-interval 1
 set -g status-left-length 25
 set -g status-right-length 68
 set -g status-left '#[fg=magenta] %a %d, %H:%M:%S#[default]'
-set -g status-right '#[fg=cyan]#(sh $HOME/.tmux/np_spotify.sh) #[fg=yellow]#(cut -d " " -f 1-4 /proc/loadavg)#[default] '
+set -g status-right '#[fg=cyan]#(sh $HOME/bin/np.sh) #[fg=yellow]#(cut -d " " -f 1-4 /proc/loadavg)#[default] '
 
 # Notifying if other windows has activities
 setw -g monitor-activity off
