Tmux update. A few settings for zsh as well.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -57,6 +57,9 @@ bind C-h select-pane -R
 bind C-j select-pane -D
 bind C-k select-pane -U
 
+unbind v
+bind v choose-window "move-pane -ht '%%'"
+
 bind C-z last-window
 
 # Terminal emulator window title
@@ -70,14 +73,13 @@ set -g pane-active-border-bg default
 set -g pane-active-border-fg green
 
 # Status Bar
-set -g status-bg default
+set -g status-bg colour232
 set -g status-fg brightgreen
 set -g status-justify left
-set -g status-interval 1
-set -g status-left-length 25
-set -g status-right-length 68
-set -g status-left '#[fg=magenta] %a %d, %H:%M:%S#[default]'
-set -g status-right '#[fg=cyan]#(sh $HOME/bin/np.sh) #[fg=yellow]#(cut -d " " -f 1-4 /proc/loadavg)#[default] '
+set -g status-interval 2
+set -g status-left '#[bg=brightred,fg=black] #S #[default]'
+set -g status-right-length 100
+set -g status-right '#[fg=black,bg=cyan]#(np=`sh $HOME/bin/np.sh`; [ -n "$np" ] && echo " $np ";)#[fg=black,bg=red]#(x=`cat /tmp/pacman_updates`; [ $x -gt 0 ] && echo " Updates: $x ";)#[fg=black,bg=green] #(cut -d " " -f 1,4 /proc/loadavg) #[default]#[fg=black,bg=magenta] %H:%M #[default]'
 
 # Notifying if other windows has activities
 setw -g monitor-activity off
@@ -86,10 +88,15 @@ set -g visual-bell off
 set-window-option -g utf8 on
 
 # Highlighting the active window in status bar
-setw -g window-status-current-fg yellow
-setw -g window-status-bell-fg yellow
-setw -g window-status-bell-bg black
-setw -g window-status-fg red
+setw -g window-status-format "#[fg=brightyellow,bg=default]#I.#[default]#W#[fg=magenta]#F"
+setw -g window-status-current-format " #W "
+setw -g window-status-current-fg black
+setw -g window-status-current-bg white
+setw -g window-status-bell-attr none
+setw -g window-status-bell-fg black
+setw -g window-status-bell-bg red
+setw -g window-status-separator ''
+setw -g window-status-fg brightblack
 
 # Clock
 setw -g clock-mode-colour green
