Tmux.conf rewrite.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,106 +1,164 @@
+unbind-key -a
+# Options {{{
 # Change prefix key to Ctrl+a
-unbind C-b
-set -g prefix C-z
+set-option -g prefix C-z
 
-# Last active window
-unbind l
-bind C-a last-window
+set-option -g default-terminal screen-256color
+# How long should repeats be valid (ms)
+set-option -g repeat-time 750
 
-set -g default-terminal screen-256color
-
-# Copy mode
-unbind [
-bind Escape copy-mode
-# Use Vi mode
-setw -g mode-keys vi
-# Make mouse useful in copy mode
-set -g mode-mouse on
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
-
-bind m \
-    set -g mode-mouse on\;\
-    set -g mouse-resize-pane on \;\
-    set -g mouse-select-pane on \;\
-    set -g mouse-select-window on \;\
-    display "Mouse: ON"
-
-bind M \
-    set -g mode-mouse off\;\
-    set -g mouse-resize-pane off \;\
-    set -g mouse-select-pane off \;\
-    set -g mouse-select-window off \;\
-    display "Mouse: off"
-
-bind y run "tmux show-buffer | xclip"
-bind P run "tmux set-buffer -- \"$(xclip -o)\"; tmux paste-buffer"
-
-set -g escape-time 0
-
-# More straight forward key bindings for splitting
-unbind %
-bind | split-window -h
-bind h split-window -h
-unbind '"'
-bind - split-window -v
-bind v split-window -v
-
+set-option -g escape-time 0
+set-option -g renumber-windows on
 # History
-set -g history-limit 1000
-
-# Pane
-unbind o
-bind C-l select-pane -L
-bind C-h select-pane -R
-bind C-j select-pane -D
-bind C-k select-pane -U
-
-unbind v
-bind v choose-window "move-pane -ht '%%'"
-
-bind C-z last-window
-
-# Terminal emulator window title
-set -g set-titles on
-set -g set-titles-string '#S:#I.#P #W'
+set-option -g history-limit 1000
 
 # Pane border
-set -g pane-border-bg default
-set -g pane-border-fg white
-set -g pane-active-border-bg default
-set -g pane-active-border-fg green
+set-option -g pane-border-bg default
+set-option -g pane-border-fg white
+set-option -g pane-active-border-bg default
+set-option -g pane-active-border-fg green
 
-# Status Bar
-set -g status-bg colour232
-set -g status-fg brightgreen
-set -g status-justify left
-set -g status-interval 2
-set -g status-left '#[bg=brightred,fg=black] #S #[default]'
-set -g status-right-length 100
-set -g status-right '#[fg=black,bg=cyan]#(np=`sh $HOME/bin/np.sh`; [ -n "$np" ] && echo " $np ";)#[fg=black,bg=red]#(x=`cat /tmp/pacman_updates`; [ $x -gt 0 ] && echo " Updates: $x ";)#[fg=black,bg=green] #(cut -d " " -f 1,4 /proc/loadavg) #[default]#[fg=black,bg=magenta] %H:%M #[default]'
+set-option -g visual-activity on
+set-option -g visual-bell off
+
+set-option -g display-time 2000
+set-option -g display-panes-time 2000
+set-option -g display-panes-colour white
+set-option -g display-panes-active-colour red
+
+# Statusbar {{{
+set-option -g message-bg colour232
+set-option -g message-fg white
+set-option -g message-command-bg colour232
+set-option -g message-command-fg magenta
+set-option -g status-bg colour232
+set-option -g status-fg brightgreen
+set-option -g status-justify left
+set-option -g status-interval 2
+set-option -g status-left '#[bg=brightred,fg=black] #S #[default]'
+set-option -g status-right-length 100
+set-option -g status-right '#[fg=black,bg=cyan]#(np=`sh $HOME/bin/np.sh`; [ -n "$np" ] && echo " $np ";)#[fg=black,bg=red]#(x=`cat /tmp/pacman_updates`; [ $x -gt 0 ] && echo " Updates: $x ";)#[fg=black,bg=green] #(cut -d " " -f 1,4 /proc/loadavg) #[default]#[fg=black,bg=magenta] %H:%M #[default]'
+# }}}
+
+# }}}
+
+# Window options {{{
+set-window-option -g mode-keys vi
+
+# Make mouse useful in copy mode
+set-window-option -g mode-mouse on
 
 # Notifying if other windows has activities
-setw -g monitor-activity off
-set -g visual-activity on
-set -g visual-bell off
+set-window-option -g monitor-activity off
 set-window-option -g utf8 on
 
-# Highlighting the active window in status bar
-setw -g window-status-format "#[fg=brightyellow,bg=default]#I.#[default]#W#[fg=magenta]#F"
-setw -g window-status-current-format " #W "
-setw -g window-status-current-fg black
-setw -g window-status-current-bg white
-setw -g window-status-bell-attr none
-setw -g window-status-bell-fg black
-setw -g window-status-bell-bg red
-setw -g window-status-separator ''
-setw -g window-status-fg brightblack
-
 # Clock
-setw -g clock-mode-colour green
-setw -g clock-mode-style 24
+set-window-option -g clock-mode-colour green
+set-window-option -g clock-mode-style 24
+# }}}
 
-# Pass through the prefix (to screen for example)
-bind-key z send-keys C-z
+# StatusBar {{{
+# Highlighting the active window in status bar
+set-window-option -g window-status-format "#I.#W#F"
+set-window-option -g window-status-current-format " #W "
+set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-bg white
+set-window-option -g window-status-bell-attr none
+set-window-option -g window-status-bell-fg black
+set-window-option -g window-status-bell-bg red
+set-window-option -g window-status-activity-fg black
+set-window-option -g window-status-activity-bg red
+set-window-option -g window-status-separator ''
+set-window-option -g window-status-fg brightblack
+# }}}
+
+# Bindings {{{
+# Pass through the prefix
+bind-key t send-keys C-z
+
+bind-key ? list-keys
+
+# Copy mode
+bind-key Escape copy-mode
+# Use Vi mode
+bind-key m \
+    set -g mode-mouse on\;\
+    display "Mouse: ON"
+
+bind-key M \
+    set -g mode-mouse off\;\
+    display "Mouse: off"
+
+bind-key y run "tmux show-buffer | xclip"
+bind-key P run "tmux set-buffer -- \"$(xclip -o)\"; tmux paste-buffer"
+
+bind-key : command-prompt
+
+bind-key d detach-client
+
+bind-key s choose-session
+
+bind-key , command-prompt -I "#W" "rename-window '%%'"
+
+bind-key K confirm-before -p "Kill window: #W (y/N)" "kill-window"
+
+# Windows {{{
+bind-key w choose-window
+bind-key C-z last-window
+
+bind-key c new-window
+# Start in the home-directory
+bind-key C new-window -c "~"
+
+bind-key -r C-n next-window
+bind-key -r C-p previous-window
+bind-key -r N swap-window -t:+
+bind-key -r P swap-window -t:-
+
+bind-key 0 select-window -t :0
+bind-key 1 select-window -t :1
+bind-key 2 select-window -t :2
+bind-key 3 select-window -t :3
+bind-key 4 select-window -t :4
+bind-key 5 select-window -t :5
+bind-key 6 select-window -t :6
+bind-key 7 select-window -t :7
+bind-key 8 select-window -t :8
+bind-key 9 select-window -t :9
+# }}}
+
+# Panes {{{
+bind-key v choose-window "move-pane -ht '%%'"
+bind-key b break-pane -d
+
+bind-key D display-panes
+
+# More straight forward key binding for splitting
+bind-key | split-window -h
+bind-key - split-window -v
+
+# Pane
+bind-key C-l select-pane -L
+bind-key C-h select-pane -R
+bind-key C-j select-pane -D
+bind-key C-k select-pane -U
+bind-key l select-pane -L
+bind-key h select-pane -R
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key K swap-pane -U
+bind-key J swap-pane -D
+bind-key S command-prompt -p "Swap with pane num.:" "swap-pane -s:.'%%'"
+
+bind-key z last-pane
+
+# Resize
+bind-key -r Up resize-pane -U 10
+bind-key -r Down resize-pane -D 10
+bind-key -r Left resize-pane -L 10
+bind-key -r Right resize-pane -R 10
+# }}}
+
+# }}}
+
+# vim:foldmethod=marker:ft=tmux
