--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,7 @@ unbind-key -a
 # Change prefix key to Ctrl+a
 set-option -g prefix C-z
 
+set-option -g set-titles on
 set-option -g default-terminal screen-256color
 # How long should repeats be valid (ms)
 set-option -g repeat-time 750
@@ -37,7 +38,7 @@ set-option -g status-justify left
 set-option -g status-interval 2
 set-option -g status-left '#[bg=brightred,fg=black] #S #[default]'
 set-option -g status-right-length 100
-set-option -g status-right '#[fg=black,bg=cyan]#(np=`sh $HOME/bin/np.sh`; [ -n "$np" ] && echo " $np ";)#[fg=black,bg=red]#(x=`cat /tmp/pacman_updates`; [ $x -gt 0 ] && echo " Updates: $x ";)#[fg=black,bg=green] #(cut -d " " -f 1,4 /proc/loadavg) #[default]#[fg=black,bg=magenta] %H:%M #[default]'
+set-option -g status-right '#[fg=black,bg=cyan]#(np=`sh $HOME/bin/np.sh`; [ -n "$np" ] && echo " $np ";)#[fg=black,bg=magenta] #($HOME/git/utils/netspeed) #[fg=black,bg=red]#(x=`cat /tmp/pacman_updates`; [ $x -gt 0 ] && echo " Updates: $x ";)#[fg=black,bg=green] #(cut -d " " -f 1,4 /proc/loadavg) #[default]#[fg=black,bg=white] %H:%M #[default]'
 # }}}
 
 # }}}
@@ -47,6 +48,8 @@ set-window-option -g mode-keys vi
 
 # Make mouse useful in copy mode
 set-window-option -g mode-mouse on
+
+set-window-option -g mode-bg green
 
 # Notifying if other windows has activities
 set-window-option -g monitor-activity off
@@ -90,7 +93,7 @@ bind-key M \
     display "Mouse: off"
 
 bind-key y run "tmux show-buffer | xclip"
-bind-key P run "tmux set-buffer -- \"$(xclip -o)\"; tmux paste-buffer"
+bind-key p run "tmux set-buffer -- \"$(xclip -o)\"; tmux paste-buffer"
 
 bind-key : command-prompt
 
@@ -105,6 +108,8 @@ bind-key K confirm-before -p "Kill window: #W (y/N)" "kill-window"
 # Windows {{{
 bind-key w choose-window
 bind-key C-z last-window
+
+bind-key L choose-session "link-window -t '%%'"
 
 bind-key c new-window
 # Start in the home-directory
@@ -153,10 +158,10 @@ bind-key S command-prompt -p "Swap with pane num.:" "swap-pane -s:.'%%'"
 bind-key z last-pane
 
 # Resize
-bind-key -r Up resize-pane -U 10
-bind-key -r Down resize-pane -D 10
-bind-key -r Left resize-pane -L 10
-bind-key -r Right resize-pane -R 10
+bind-key -r K resize-pane -U 10
+bind-key -r J resize-pane -D 10
+bind-key -r H resize-pane -L 10
+bind-key -r L resize-pane -R 10
 # }}}
 
 # }}}
