--- a/.gitmodules
+++ b/.gitmodules
@@ -49,12 +49,6 @@
 [submodule ".vim/bundle/gundu.vim"]
 	path = .vim/bundle/gundu.vim
 	url = git://github.com/sjl/gundo.vim.git
-[submodule ".xresources/base16"]
-	path = .xresources/base16
-	url = git://github.com/chriskempson/base16-xresources.git
-[submodule ".vim/bundle/base16"]
-	path = .vim/bundle/base16
-	url = git://github.com/chriskempson/base16-vim.git
 [submodule ".vim/bundle/vim-jinja2-syntax"]
 	path = .vim/bundle/vim-jinja2-syntax
 	url = git://github.com/Glench/Vim-Jinja2-Syntax.git
@@ -73,3 +67,6 @@
 [submodule ".vim/bundle/php.vim"]
 	path = .vim/bundle/php.vim
 	url = git://github.com/StanAngeloff/php.vim.git
+[submodule ".vim/bundle/vdebug"]
+	path = .vim/bundle/vdebug
+	url = git://github.com/joonty/vdebug.git
